Yamls/OIDC/sso.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oidc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-oidc
  namespace: oidc
spec:
  ports:
    - port: 5432
      name: postgres
  selector:
    app: postgres-oidc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-oidc
  namespace: oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-oidc
  template:
    metadata:
      labels:
        app: postgres-oidc
    spec:
      containers:
        - name: postgres-oidc
          image: postgres:12-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-oidc-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-oidc-data
          persistentVolumeClaim:
            claimName: oidc-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycoak
          image:  jboss/keycloak
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: oidc
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
      nodePort: 30100
      targetPort: 8080
  selector:
    app: keycloak
  type: NodePort
