Yamls/OIDC/sso_auth_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oidc-ing
  namespace: oidc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - auth.cloud.nanosolveit.eu
    secretName: oidc-auth-tls
  rules:
  - host: auth.cloud.nanosolveit.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 8080
