Yamls/OIDC/sso_sec_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oidc
  namespace: oidc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - login.cloud.nanosolveit.eu
    secretName: oidc-tls-prod
  rules:
  - host: login.cloud.nanosolveit.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 8080
